# chessmadness-api

./: .gitignore  AGENTS.md  README.md  chessApp-specs.md  pyproject.toml
app/: database.py  main.py
app/core/: config.py
app/routers/: games.py  import_.py  lines.py  review.py  skills.py  themes.py
app/schemas/: games.py  lines.py  review.py  skills.py  themes.py
app/services/: fen_index.py  fen_normalize.py  game_analyzer.py  line_service.py  pgn_importer.py  skill_mastery.py  skill_service.py  skill_share.py  sm2.py
tests/: conftest.py
tests/integration/: test_games.py  test_import.py  test_lines.py  test_review.py  test_skill_share.py  test_skills.py  test_themes.py
tests/unit/: test_fen_index.py  test_fen_normalize.py  test_game_analyzer.py  test_line_service.py  test_pgn_importer.py  test_skill_mastery.py  test_skill_service.py  test_skill_share.py  test_sm2.py
